Add data list in the main page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Main</title>
     <link href="lib/bootstrap-3.3.5/css/bootstrap.min.css", rel="stylesheet"/>
+    <link href="css/common.css", rel="stylesheet"/>
+    <link href="css/main.css", rel="stylesheet"/>
     <script src="lib/jquery-3.1.1.js"></script>
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/angular-ui-router.js"></script>
