--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/angular-ui-router.js"></script>
     <script src="lib/bootstrap-3.3.5/js/bootstrap.min.js"></script>
+    <script src="lib/bootstrap-3.3.5/js/bootstrap-modal.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers/main-controller.js"></script>
+    <script src="js/controllers/ac-controller.js"></script>
 </head>
 <body>
     <div id="main" class="content">
